{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 60,
  "lineage": "70a542b1-85d9-3a13-74e7-0d34bb61d3c0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:internet-gateway/igw-03a92d268405adcae",
            "id": "igw-03a92d268405adcae",
            "owner_id": "140839674073",
            "vpc_id": "vpc-0aa3280f7b0bc64b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03a92d268405adcae",
            "id": "r-rtb-0a7423237b72efc7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7423237b72efc7f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:route-table/rtb-0a7423237b72efc7f",
            "id": "rtb-0a7423237b72efc7f",
            "owner_id": "140839674073",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0aa3280f7b0bc64b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e3a1e739451c4a6",
            "route_table_id": "rtb-0a7423237b72efc7f",
            "subnet_id": "subnet-0914de214390c8638"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fcfbff083da0ed7",
            "route_table_id": "rtb-0a7423237b72efc7f",
            "subnet_id": "subnet-0bf108ce64eb34a97"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:security-group/sg-0cd86dfebf9534c9b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd86dfebf9534c9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210711181908670800000001",
            "name_prefix": "terraform-",
            "owner_id": "140839674073",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0aa3280f7b0bc64b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:subnet/subnet-0914de214390c8638",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.0.0/24",
            "id": "subnet-0914de214390c8638",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140839674073",
            "tags": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aa3280f7b0bc64b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:subnet/subnet-0bf108ce64eb34a97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-0bf108ce64eb34a97",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140839674073",
            "tags": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aa3280f7b0bc64b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ram",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140839674073:vpc/vpc-0aa3280f7b0bc64b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-039af2e35b19da7ad",
            "default_route_table_id": "rtb-023d2d680b65821dd",
            "default_security_group_id": "sg-032b86ec532f48b69",
            "dhcp_options_id": "dopt-c9e82da2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aa3280f7b0bc64b3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-023d2d680b65821dd",
            "owner_id": "140839674073"
          }
        }
      ]
    }
  ]
}